# grip-releases

./: AUTHORS  CHANGES  CREDITS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  acconfig.h  aclocal.m4  bug.c  cd.c  cddb.c  cdpar.c  config.h  config.h.in  configure  configure.in  gcdicon.tif  grip.1  grip.c  grip.desktop  grip.h  grip.pod  grip.spec  grip.spec.in  gripicon.tif  id3.c  parsecfg.c  parsecfg.h  xpm.h
contrib/: Makefile.in  write-gronk-discid
dialog/: dialog.h  input.c  message.c
doc/: Makefile.in
doc/C/: Makefile.am  Makefile.in  grip.html  grip.sgml  grip.xml
doc/C/grip/: acknowledge.html  bugs.html  cddb.html  cdplayer.html  configure.html  discdbconfig.html  faq.html  grip.html  gripswitches.html  id3config.html  intro.html  license.html  ln14.html  miscconfig.html  morehelp.html  mp3config.html  proxyconfig.html  rip-perform.html  ripconfig.html  ripping.html  sect-scsi.html  sect-trackmode.html  sect_trackmode.html  x131.html  x135.html
macros/: Makefile.in
pixmaps/: Makefile.am  Makefile.in  cddb0.xpm  cddb1.xpm  cddbwht.xpm
po/: ChangeLog  POTFILES.in  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  grip-2.2.pot  grip.pot  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  nl.gmo  nl.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  zh_CN.gmo  zh_CN.po  zh_HK.gmo  zh_HK.po  zh_TW.gmo  zh_TW.po
src/: Makefile.am  Makefile.in  cddev.c  cddev.h  cdpar.c  cdplay.c  cdplay.h  common.h  dialog.c  discdb.c  discdb.h  discedit.c  grip.c  grip.h  grip_id3.h  gripcfg.c  gripcfg.h  id3.c  launch.c  launch.h  main.c  parsecfg.c  parsecfg.h  rip.c  rip.h  status_window.c  status_window.h  uihelper.c  xpm.h
