EXTRA_DIST = gripicon.png check.xpm enc1.xpm lowleft.xpm playnorm.xpm \
              rip0.xpm smile2.xpm stop.xpm discdb0.xpm enc2.xpm lowright.xpm \
	      playpaus.xpm rip1.xpm smile3.xpm discdb1.xpm enc3.xpm mail.xpm \
	      prevtrk.xpm rip2.xpm smile4.xpm upleft.xpm discdbwht.xpm \
	      ff.xpm minmax.xpm progtrack.xpm rip3.xpm smile5.xpm \
	      upright.xpm edit.xpm gcd.xpm nexttrk.xpm quit.xpm rotate.xpm \
	      smile6.xpm vol.xpm eject.xpm grip.xpm noloop.xpm random.xpm \
	      save.xpm smile7.xpm enc0.xpm loop.xpm playlist.xpm rew.xpm \
	      smile1.xpm smile8.xpm

pixmapdir = $(datadir)/pixmaps

pixmap_DATA = gripicon.png
